--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,11 +8,11 @@
         android:id="@+id/fr_home_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Danh sách bài hát"
+        android:text="Danh sách công việc"
         android:textStyle="bold"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="5dp"
-        android:textSize="20dp"
+        android:textSize="22dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
