--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -27,6 +27,17 @@
         android:queryHint="Tìm kiếm..."
         android:iconifiedByDefault="false"
         />
+    <TextView
+        android:id="@+id/workStat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/border_radius"
+        android:text="Số lượng"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="15dp"
+        android:padding="10dp"
+        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fr_search_recycler"
         android:layout_width="match_parent"
